# LRez

./: CMakeLists.txt  INSTALL  README.md
scripts/: idx_bx_sqlite3.py  reads_bx_sqlite3.py
tools/: CMakeLists.txt
tools/BamExtractor/src/: BamExtractor.cpp
tools/Compare/src/: BamComparator.cpp
